--- a/classes/bard.html
+++ b/classes/bard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-13 Sun 15:25 -->
+<!-- 2023-09-11 Mon 18:01 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Bard</title>
@@ -202,7 +202,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org607956c">1. Level-up</a></li>
+<li><a href="#org2c94b9d">1. Level-up</a></li>
 </ul>
 </div>
 </div>
@@ -220,17 +220,18 @@ Support the rest of the party using your talents, or your &ldquo;talents&rdquo;.
 To begin playing a Bard, first choose a subclass: [<a href="subclasses/actor.html#ID-6a8efa65-451d-4eac-a069-84661a0c69ab">Actor</a>, <a href="subclasses/muse.html#ID-067059f6-be3d-4994-86ca-d7d33a291a79">Muse</a>, <a href="subclasses/craftsman.html#ID-05331b42-b242-4866-a6e6-df9cdad306e7">Craftsman</a>]. These subclasses give you special traits that increase in power as you get stronger, and a few distinct advantages right out the gate. Your character also gains 1 talisman (consult with DM to learn what you get). Be sure you apply your level 1 bonuses from your subclass.
 </p>
 
-<p>
-<span class="underline">Spell attack bonus</span>: PROF + INT
-<span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP
-</p>
-<div id="outline-container-org607956c" class="outline-2">
-<h2 id="org607956c"><span class="section-number-2">1.</span> Level-up</h2>
+<ul class="org-ul">
+<li><span class="underline">Spell attack bonus</span>: PROF + INT</li>
+<li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount you roll to your base health every time you level up.</li>
+</ul>
+
+<div id="outline-container-org2c94b9d" class="outline-2">
+<h2 id="org2c94b9d"><span class="section-number-2">1.</span> Level-up</h2>
 <div class="outline-text-2" id="text-1">
 <ol class="org-ol">
 <li>Gain Life Force Manipulation. At any time, you may use your turn to deal 1d6 decay damage to an enemy or heal an ally for 1d6. This can only be used in combat, but you can use it once after combat to heal if necessary.</li>
 <li>Gain a subclass ability. Gain 1d6 health.</li>
-<li>Your Intelligence and Wisdom scores both increase by 1.</li>
+<li>Your Intelligence and Wisdom scores both increase by 1. Gain a subclass ability.</li>
 <li>Gain Health Transfer. Twice per combat, you may transfer up to 10 health from yourself to an ally. Gain 2d6 health.</li>
 <li>Your Charisma is increased by +1. Gain 1d6 health.</li>
 <li>Life Force Manipulation’s strength increases to 1d10.</li>
@@ -239,7 +240,7 @@ To begin playing a Bard, first choose a subclass: [<a href="subclasses/actor.htm
 <li>Gain Bard Buff. Once per combat, grant one of your allies one of the bard buffs for the rest of combat (see subclasses for a list).</li>
 <li>Gain a subclass ability. Gain 1d6 health.</li>
 <li>Life Force Manipulation’s strength increases to 2d8.</li>
-<li>Health Transfer’s strength increases to 20 health. Gain 1d6 health.</li>
+<li>Health Transfer’s strength increases to 20 health. Gain 1d6 health. Gain a subclass ability.</li>
 <li>Learn Upgraded Transmutation - gain one more damage type, and when applying transmutation, the damage increases to 2d6.</li>
 <li>Gain +1 of Any. Gain 1d6 health.</li>
 <li>Subclass Feature.</li>
@@ -256,7 +257,7 @@ To begin playing a Bard, first choose a subclass: [<a href="subclasses/actor.htm
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-13 Sun 15:25</p>
+<p class="date">Created: 2023-09-11 Mon 18:01</p>
 </div>
 </body>
 </html>
