--- a/classes/rogue.html
+++ b/classes/rogue.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-18 Tue 16:36 -->
+<!-- 2023-09-11 Mon 19:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Rogue</title>
@@ -202,16 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org00f64af">1. Level-up</a></li>
+<li><a href="#org6df0485">1. Proficiencies</a></li>
+<li><a href="#org8bb24f0">2. Level-up</a></li>
 </ul>
 </div>
 </div>
-<div class="org-center">
-<p>
-[<a href="../dnd.html#ID-DND">Main Menu</a>] [<a href="../player-introduction.html#ID-17a96883-cc40-409c-9fb5-80d5ab0c8379">Player Introduction Sheet</a>] [<a href="classes.html#ID-campaign-classes">Classes</a>]
-</p>
-</div>
-<hr />
 <p>
 Sneak, steal, deceive, and assassinate those who oppose your endeavors.
 </p>
@@ -221,15 +216,69 @@ To begin as a rogue, chose a subclass [<a href="subclasses/ninja.html#ID-befa4d8
 </p>
 
 <ul class="org-ul">
+<li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount you roll to your base health every time you level up.</li>
 <li>Gain 1 toolkit</li>
-<li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP.</li>
 </ul>
 
-<div id="outline-container-org00f64af" class="outline-2">
-<h2 id="org00f64af"><span class="section-number-2">1.</span> Level-up</h2>
+<div id="outline-container-org6df0485" class="outline-2">
+<h2 id="org6df0485"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">Armor</th>
+<th scope="col" class="org-left">Weapons</th>
+<th scope="col" class="org-left">Tools</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">Light Armor</td>
+<td class="org-left">Daggers</td>
+<td class="org-left">Thieves Tools</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Bows</td>
+<td class="org-left">Lockpicking Kit</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Crossbows</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Spears</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Shortswords</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div id="outline-container-org8bb24f0" class="outline-2">
+<h2 id="org8bb24f0"><span class="section-number-2">2.</span> Level-up</h2>
+<div class="outline-text-2" id="text-2">
 <ol class="org-ol">
-<li>Gain the ability to Sneak Attack. If invisible or hidden, gain an extra 1d6 damage on the next attack.</li>
+<li>Gain Sneak Attack. If invisible or hidden, gain an extra 1d6 damage on the next attack.</li>
 <li>Add 1d6 health.</li>
 <li>Become proficient with a new class of weapon. Your next purchase of this class of weapon is discounted by 50%. Add 1d6 health.</li>
 <li>You are now able to hide in plain sight upon passing a deception check that surpasses a perception check made by your enemy. Your Deception modifier is + 3.</li>
@@ -257,7 +306,7 @@ To begin as a rogue, chose a subclass [<a href="subclasses/ninja.html#ID-befa4d8
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-18 Tue 16:36</p>
+<p class="date">Created: 2023-09-11 Mon 19:48</p>
 </div>
 </body>
 </html>
