--- a/classes/wizard.html
+++ b/classes/wizard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-07 Thu 15:35 -->
+<!-- 2023-09-11 Mon 18:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Wizard</title>
@@ -202,8 +202,8 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf14a79d">1. Proficiencies</a></li>
-<li><a href="#orgc97ff6f">2. Level-up guide</a></li>
+<li><a href="#org6c91307">1. Proficiencies</a></li>
+<li><a href="#org97961de">2. Level-up guide</a></li>
 </ul>
 </div>
 </div>
@@ -222,11 +222,12 @@ To begin as a wizard, choose an element to subclass into: [<a href="subclasses/f
 </p>
 
 <ul class="org-ul">
-<li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP.</li>
+<li><span class="underline">Initial Health</span>: Roll a 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.</li>
+<li>Spells are cast using INT + PROF (Wisdom modifier + Proficiency modifier)</li>
 </ul>
 
-<div id="outline-container-orgf14a79d" class="outline-2">
-<h2 id="orgf14a79d"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-org6c91307" class="outline-2">
+<h2 id="org6c91307"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -267,8 +268,8 @@ To begin as a wizard, choose an element to subclass into: [<a href="subclasses/f
 </table>
 </div>
 </div>
-<div id="outline-container-orgc97ff6f" class="outline-2">
-<h2 id="orgc97ff6f"><span class="section-number-2">2.</span> Level-up guide</h2>
+<div id="outline-container-org97961de" class="outline-2">
+<h2 id="org97961de"><span class="section-number-2">2.</span> Level-up guide</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li>Pick one generic spell, one wizard spell, and one elemental spell (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.</li>
@@ -299,7 +300,7 @@ To begin as a wizard, choose an element to subclass into: [<a href="subclasses/f
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-07 Thu 15:35</p>
+<p class="date">Created: 2023-09-11 Mon 18:04</p>
 </div>
 </body>
 </html>
