--- a/classes/paladin.html
+++ b/classes/paladin.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-07 Thu 15:22 -->
+<!-- 2023-09-11 Mon 18:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Paladin</title>
@@ -202,8 +202,8 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3807b3d">1. Proficiencies</a></li>
-<li><a href="#org62e7423">2. Level-up</a></li>
+<li><a href="#org399652c">1. Proficiencies</a></li>
+<li><a href="#org7f1f4b7">2. Level-up</a></li>
 </ul>
 </div>
 </div>
@@ -218,11 +218,11 @@ Defend the faith and the faithful with the might of your god. Whether sworn befo
 </p>
 
 <ul class="org-ul">
-<li>Initial Health: Roll 1d10 and add it to your base HP. This is your Hit Die (HD). You will add the amount you roll to your base health every time you level up.</li>
+<li><span class="underline">Initial Health</span>: Roll a 1d10 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.</li>
 </ul>
 
-<div id="outline-container-org3807b3d" class="outline-2">
-<h2 id="org3807b3d"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-org399652c" class="outline-2">
+<h2 id="org399652c"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -275,8 +275,8 @@ Defend the faith and the faithful with the might of your god. Whether sworn befo
 </table>
 </div>
 </div>
-<div id="outline-container-org62e7423" class="outline-2">
-<h2 id="org62e7423"><span class="section-number-2">2.</span> Level-up</h2>
+<div id="outline-container-org7f1f4b7" class="outline-2">
+<h2 id="org7f1f4b7"><span class="section-number-2">2.</span> Level-up</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li><p>
@@ -309,7 +309,7 @@ Also gain <span class="underline">Divine Sense</span>. The presence of strong ev
 <div id="postamble" class="status">
 <p class="date">Date: 2023-08-09 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-07 Thu 15:22</p>
+<p class="date">Created: 2023-09-11 Mon 18:05</p>
 </div>
 </body>
 </html>
