--- a/dnd.html
+++ b/dnd.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-04 Mon 10:36 -->
+<!-- 2023-09-15 Fri 08:22 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DnD Landing Page</title>
@@ -199,7 +199,7 @@
 <div id="content" class="content">
 <h1 class="title">DnD Landing Page</h1>
 <hr />
-<div class="menu" id="org7a225b7">
+<div class="menu" id="orgc599876">
 <p>
 <a href="character-sheet.pdf">Blank Character Sheet</a>
 </p>
@@ -221,7 +221,7 @@ World Overview
 </p>
 
 <p>
-<a href="guides/spell-index.html#ID-b1b752cb-445c-4902-999d-443c83d5113a">Spell Index</a>
+<a href="guides/spell-index.html#ID-49c66431-d9c7-4213-ae29-b62365fd32d4">Spell Index</a>
 </p>
 
 <p>
@@ -234,7 +234,7 @@ World Overview
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-04 Mon 10:36</p>
+<p class="date">Created: 2023-09-15 Fri 08:22</p>
 </div>
 </body>
 </html>
