--- a/classes/subclasses/psychic_sorcerer.html
+++ b/classes/subclasses/psychic_sorcerer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-08 Fri 13:57 -->
+<!-- 2024-02-22 Thu 21:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Psychic Sorcerer</title>
@@ -202,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf642c23">1. Sorcerer Traits</a></li>
-<li><a href="#orgdfbd51d">2. Level 1 Sorceries</a></li>
-<li><a href="#org4a00d10">3. Level 2 (5+) Sorceries</a></li>
-<li><a href="#org5aa77c1">4. Level 3 (11+) Sorceries</a></li>
-<li><a href="#orgfefaa96">5. Level 4 (15+) Sorceries</a></li>
+<li><a href="#org86a17a3">1. Sorcerer Traits</a></li>
+<li><a href="#org506031c">2. Level 1 Sorceries</a></li>
+<li><a href="#org7f4be1b">3. Level 2 (5+) Sorceries</a></li>
+<li><a href="#orgcc95c1b">4. Level 3 (11+) Sorceries</a></li>
+<li><a href="#org1d2f7a8">5. Level 4 (15+) Sorceries</a></li>
 </ul>
 </div>
 </div>
@@ -217,30 +217,30 @@
 </div>
 <hr />
 <p>
-Something in your mind has unhinged, and in an absolute fluke this has unlocked a hidden magic that lies within the minds and hearts of all beings.
+Something in your mind has unhinged, and in an absolute fluke this has unlocked a potent hidden magic that lies within the minds and hearts of all beings.
 </p>
 
-<div id="outline-container-orgf642c23" class="outline-2">
-<h2 id="orgf642c23"><span class="section-number-2">1.</span> Sorcerer Traits</h2>
+<div id="outline-container-org86a17a3" class="outline-2">
+<h2 id="org86a17a3"><span class="section-number-2">1.</span> Sorcerer Traits</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li><i>Gift of Gab</i>: For one reason or another, you&rsquo;re a enthralling speaker. Your persuasion attempts have advantage</li>
+<li><i>Gift of Gab</i>: For one reason or another, you&rsquo;re a enthralling speaker. Your persuasion attempts have advantage on unintelligent creatures.</li>
 <li><i>Schizoid</i>:</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgdfbd51d" class="outline-2">
-<h2 id="orgdfbd51d"><span class="section-number-2">2.</span> Level 1 Sorceries</h2>
+<div id="outline-container-org506031c" class="outline-2">
+<h2 id="org506031c"><span class="section-number-2">2.</span> Level 1 Sorceries</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Migraine</b></span>: Roll to hit. On hit, give a target a headache for three turns. Deal 1d8 madness damage on the first turn, 1d6 psychic damage, and 1d4 psychic damage.</li>
-<li><span class="underline"><b>Cursed Knowledge</b></span>: Allow a party member to glimpse the insanity. Give this member +4 insight for the whole turn.</li>
+<li><span class="underline"><b>Cursed Knowledge</b></span>: Allow a party member to glimpse the beyond. Give this member +4 insight for the whole turn.</li>
 <li><span class="underline"><b>Discordant Whisper</b></span>: You whisper a discordant melody that only one creature of your choice within range can hear, wracking it with terrible pain. The target must make a Wisdom saving throw. On a failed save, it takes 3d6 psychic damage and must immediately use its reaction, if available, to move as far as its speed allows away from you. The creature doesn’t move into obviously dangerous ground, such as a fire or a pit. On a successful save, the target takes half as much damage and doesn’t have to move away. A deafened creature automatically succeeds on the save.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4a00d10" class="outline-2">
-<h2 id="org4a00d10"><span class="section-number-2">3.</span> Level 2 (5+) Sorceries</h2>
+<div id="outline-container-org7f4be1b" class="outline-2">
+<h2 id="org7f4be1b"><span class="section-number-2">3.</span> Level 2 (5+) Sorceries</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><span class="underline"><b>Jedi Mind Trick</b></span>: You know the rules. This automatically succeeds on every creature with less than 13 INT. Creatures at or above 13 INT must roll a INT saving throw. <i>The extent of this ability is up to DM discretion</i></li>
@@ -249,8 +249,8 @@ Something in your mind has unhinged, and in an absolute fluke this has unlocked 
 </ul>
 </div>
 </div>
-<div id="outline-container-org5aa77c1" class="outline-2">
-<h2 id="org5aa77c1"><span class="section-number-2">4.</span> Level 3 (11+) Sorceries</h2>
+<div id="outline-container-orgcc95c1b" class="outline-2">
+<h2 id="orgcc95c1b"><span class="section-number-2">4.</span> Level 3 (11+) Sorceries</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><span class="underline"><b>Mind Reader</b></span>: Twice per long rest, discern the exact intentions of a creature as well as one additional fact about them. This ability can be used only when engaged in conversation with the subject.</li>
@@ -258,8 +258,8 @@ Something in your mind has unhinged, and in an absolute fluke this has unlocked 
 </ul>
 </div>
 </div>
-<div id="outline-container-orgfefaa96" class="outline-2">
-<h2 id="orgfefaa96"><span class="section-number-2">5.</span> Level 4 (15+) Sorceries</h2>
+<div id="outline-container-org1d2f7a8" class="outline-2">
+<h2 id="org1d2f7a8"><span class="section-number-2">5.</span> Level 4 (15+) Sorceries</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><span class="underline"><b>Mind Control</b></span>: Force any creature but one of the gods to make a WIS, CON, and INT saving throw. The extent to which you mind control this person depends on how many of the saving throws they succeed on. From then on, the creature will do you bidding (<i>with some DM intervention</i>). Gain one charge every 2 long rests.</li>
@@ -271,7 +271,7 @@ Something in your mind has unhinged, and in an absolute fluke this has unlocked 
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-17 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-08 Fri 13:57</p>
+<p class="date">Created: 2024-02-22 Thu 21:10</p>
 </div>
 </body>
 </html>
