More alterations to classes in prep for c1

--- a/classes/merchant.html
+++ b/classes/merchant.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-11 Mon 17:49 -->
+<!-- 2024-02-23 Fri 13:51 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Merchant</title>
@@ -202,15 +202,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgab56284">1. Proficiencies</a></li>
-<li><a href="#orgfb75fed">2. Merchant Traits</a></li>
-<li><a href="#org63b9593">3. Level-up guide</a></li>
-<li><a href="#orgb1f172a">4. Merchant Skills</a>
+<li><a href="#orga2225e9">1. Proficiencies</a></li>
+<li><a href="#orgbc770eb">2. Merchant Traits</a></li>
+<li><a href="#org8b91108">3. Level-up guide</a></li>
+<li><a href="#orge8bab9b">4. Merchant Skills</a>
 <ul>
-<li><a href="#orgf73d440">4.1. Level 1</a></li>
-<li><a href="#orgd7b8c7b">4.2. Level 2 (5+)</a></li>
-<li><a href="#org2e83073">4.3. Level 3 (11+)</a></li>
-<li><a href="#orgf81a1f0">4.4. Level 4 (15+)</a></li>
+<li><a href="#orga406f9e">4.1. Level 1</a></li>
+<li><a href="#org847c208">4.2. Level 2 (5+)</a></li>
+<li><a href="#org9c812d5">4.3. Level 3 (11+)</a></li>
+<li><a href="#org1f2353d">4.4. Level 4 (15+)</a></li>
 </ul>
 </li>
 </ul>
@@ -227,14 +227,48 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 </p>
 
 <ul class="org-ul">
-<li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP.</li>
+<li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount you roll to your base health every time you level up.</li>
+<li>Start with 30 Silver, 15 Gold, and 3 Dragon Pesos</li>
 </ul>
 
-<div id="outline-container-orgab56284" class="outline-2">
-<h2 id="orgab56284"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-orga2225e9" class="outline-2">
+<h2 id="orga2225e9"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div class="outline-text-2" id="text-1">
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">Armor</th>
+<th scope="col" class="org-left">Weapons</th>
+<th scope="col" class="org-left">Tools</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">Light Armor</td>
+<td class="org-left">Dagger</td>
+<td class="org-left">Ledger</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Crossbow</td>
+<td class="org-left">Abbacus</td>
+</tr>
+</tbody>
+</table>
 </div>
-<div id="outline-container-orgfb75fed" class="outline-2">
-<h2 id="orgfb75fed"><span class="section-number-2">2.</span> Merchant Traits</h2>
+</div>
+<div id="outline-container-orgbc770eb" class="outline-2">
+<h2 id="orgbc770eb"><span class="section-number-2">2.</span> Merchant Traits</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><i>Heavy Sleeper</i></span>: Whenever you take a long rest, you cannot be woken up halfway through no matter what happens. This can include your death. In exchange, an hour after you wake up, your AC is increased by 2, you get +2 to CHA, your health is increased by 15, and you get +3 to Deception and Insight.</li>
@@ -242,37 +276,98 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 </ul>
 </div>
 </div>
-<div id="outline-container-org63b9593" class="outline-2">
-<h2 id="org63b9593"><span class="section-number-2">3.</span> Level-up guide</h2>
+<div id="outline-container-org8b91108" class="outline-2">
+<h2 id="org8b91108"><span class="section-number-2">3.</span> Level-up guide</h2>
 <div class="outline-text-2" id="text-3">
 <ol class="org-ol">
+<li>Gain 1 Merchant skill</li>
 <li></li>
+
+<li></li>
+
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li></li>
+
+<li>You decide its time to open your ears to new international opportunities! Learn 1 new language of your choice.</li>
+<li></li>
+
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li></li>
+
+<li></li>
+
+<li></li>
+
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li></li>
+
+<li></li>
+
+<li></li>
+
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li></li>
+
+<li></li>
+
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li>You now have the option to only pay half of the money for any action that requires a payment</li>
 </ol>
+
+<div class="org-center">
+<p>
+&#x2014; 🚧 Under Construction 🚧 &#x2014;
+</p>
 </div>
 </div>
-<div id="outline-container-orgb1f172a" class="outline-2">
-<h2 id="orgb1f172a"><span class="section-number-2">4.</span> Merchant Skills</h2>
+</div>
+<div id="outline-container-orge8bab9b" class="outline-2">
+<h2 id="orge8bab9b"><span class="section-number-2">4.</span> Merchant Skills</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgf73d440" class="outline-3">
-<h3 id="orgf73d440"><span class="section-number-3">4.1.</span> Level 1</h3>
+<div id="outline-container-orga406f9e" class="outline-3">
+<h3 id="orga406f9e"><span class="section-number-3">4.1.</span> Level 1</h3>
+<div class="outline-text-3" id="text-4-1">
+<ul class="org-ul">
+<li><span class="underline"><b>Seedy</b></span>: When fighting in an urban area, gain an extra attack, as well as advantage if you&rsquo;re the first person to move in a round.</li>
+<li><span class="underline"><b>Insider Trading</b></span>: You are aware of knowledge of the supply chain most other customers are not. When talking to the merchant, you are able to buy one rare item that is not on the store&rsquo;s inventory list</li>
+<li><span class="underline"><b>Always Hiring</b></span>: Many neutral NPCs will desire to join your party based on your Reputation modifier.</li>
+</ul>
 </div>
-
-<div id="outline-container-orgd7b8c7b" class="outline-3">
-<h3 id="orgd7b8c7b"><span class="section-number-3">4.2.</span> Level 2 (5+)</h3>
 </div>
-<div id="outline-container-org2e83073" class="outline-3">
-<h3 id="org2e83073"><span class="section-number-3">4.3.</span> Level 3 (11+)</h3>
+<div id="outline-container-org847c208" class="outline-3">
+<h3 id="org847c208"><span class="section-number-3">4.2.</span> Level 2 (5+)</h3>
+<div class="outline-text-3" id="text-4-2">
+<ul class="org-ul">
+<li><span class="underline"><b>Never Shit a Shitter</b></span>: Gain +2 to persuasion when trying to persuade someone who has a lower net worth than you do.</li>
+<li><span class="underline"><b>Rich Get Richer</b></span>: Roll a luck check every time you kill an enemy to see if they will drop double gold. This luck check is 17 - your Reputation modifier.</li>
+</ul>
 </div>
-<div id="outline-container-orgf81a1f0" class="outline-3">
-<h3 id="orgf81a1f0"><span class="section-number-3">4.4.</span> Level 4 (15+)</h3>
+</div>
+<div id="outline-container-org9c812d5" class="outline-3">
+<h3 id="org9c812d5"><span class="section-number-3">4.3.</span> Level 3 (11+)</h3>
+<div class="outline-text-3" id="text-4-3">
+<ul class="org-ul">
+<li><span class="underline"><b>Capitalist</b></span>: If you have lackeys (consult with DM to get definition of this term), they taunt whatever enemy you are attacking, forcing them to attack your wage slaves before targeting any member of the party. <i>Maximum of 3 lackeys can be used in combat</i>.</li>
+<li><span class="underline"><b>Edge of a Coin</b></span>: As an action, roll 1d4. On 1-2, your next attact does -4 damage. On 3-4, your next attack does +4 damage</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org1f2353d" class="outline-3">
+<h3 id="org1f2353d"><span class="section-number-3">4.4.</span> Level 4 (15+)</h3>
+<div class="outline-text-3" id="text-4-4">
+<ul class="org-ul">
+<li><span class="underline"><b>Advanced Bartering</b></span>: From now on, you can try to convince any enemy to stop fighting with you for a price. The price may be extremely high in some scenarios, but it may also be worth it</li>
+<li><span class="underline"><b>Skip the Bill</b></span>: Whenever you take an action that requires money, roll 1d20. If the number is &gt;= 19, you can do the action without spending money</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-26 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-11 Mon 17:49</p>
+<p class="date">Created: 2024-02-23 Fri 13:51</p>
 </div>
 </body>
 </html>
