Reworking some classes

--- a/dm-materials/material-guide.html
+++ b/dm-materials/material-guide.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-11 Fri 10:20 -->
+<!-- 2024-02-26 Mon 09:23 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Material Guide</title>
@@ -202,16 +202,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org82756d4">1. Cosmic</a></li>
-<li><a href="#orgdb73812">2. Brimstone</a></li>
-<li><a href="#org52b9b36">3. Meteor</a></li>
-<li><a href="#orgc977652">4. Mithryl</a></li>
-<li><a href="#orgb6b968c">5. Deep crystal</a></li>
-<li><a href="#org183de57">6. Dwarven Smelt</a></li>
-<li><a href="#orge25c72e">7. Steel</a></li>
-<li><a href="#org81a4ce9">8. Iron</a></li>
-<li><a href="#orgc672c41">9. Stone</a></li>
-<li><a href="#org9711846">10. Wooden</a></li>
+<li><a href="#orga50ce6f">1. Cosmic</a></li>
+<li><a href="#org8d2e2cc">2. Brimstone</a></li>
+<li><a href="#orgccbfb10">3. Meteor</a></li>
+<li><a href="#orgf24b641">4. Mithryl</a></li>
+<li><a href="#org3c61e96">5. Deep crystal</a></li>
+<li><a href="#org44c8eb3">6. Dwarven Smelt</a></li>
+<li><a href="#orgd635534">7. Steel</a></li>
+<li><a href="#org607ad17">8. Iron</a></li>
+<li><a href="#org370ff10">9. Stone</a></li>
+<li><a href="#orgd86218d">10. Wooden</a></li>
 </ul>
 </div>
 </div>
@@ -222,11 +222,11 @@
 </div>
 <hr />
 <p>
-Material list [high to low]: cosmic -&gt; meteor, mithryl -&gt; iron -&gt; stone -&gt; wooden
+Material list [high to low]: cosmic -&gt; brimstone -&gt; meteor, mithryl -&gt; iron -&gt; stone -&gt; wooden
 </p>
 
-<div id="outline-container-org82756d4" class="outline-2">
-<h2 id="org82756d4"><span class="section-number-2">1.</span> Cosmic</h2>
+<div id="outline-container-orga50ce6f" class="outline-2">
+<h2 id="orga50ce6f"><span class="section-number-2">1.</span> Cosmic</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Highest tier. Highest damage potential, high critical damage chance, and will shatter the minds of weaker enemies who cannot comprehend the madness of the cosmos. Must be wielded by a highly skilled individual to ensure that wielding the weapon does not cause the user to go mad. The user will have to fight off the effects of the weapon as they use it, limiting the material to high level characters.
@@ -234,8 +234,8 @@ Deals Chaos, Cosmic, and Madness damage to enemies
 </p>
 </div>
 </div>
-<div id="outline-container-orgdb73812" class="outline-2">
-<h2 id="orgdb73812"><span class="section-number-2">2.</span> Brimstone</h2>
+<div id="outline-container-org8d2e2cc" class="outline-2">
+<h2 id="org8d2e2cc"><span class="section-number-2">2.</span> Brimstone</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Material crafted from the dregs of Hell. Exceedingly rare.
@@ -246,8 +246,8 @@ Deals <a href="damage-guide.html#ID-23919bd5-7bb0-4743-ae81-f07566ccd236">madnes
 </p>
 </div>
 </div>
-<div id="outline-container-org52b9b36" class="outline-2">
-<h2 id="org52b9b36"><span class="section-number-2">3.</span> Meteor</h2>
+<div id="outline-container-orgccbfb10" class="outline-2">
+<h2 id="orgccbfb10"><span class="section-number-2">3.</span> Meteor</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Metal salvaged from falling meteors. Its strange magical qualities result in extremely effective weapons.
@@ -258,8 +258,8 @@ Deals fire and radiance damage
 </p>
 </div>
 </div>
-<div id="outline-container-orgc977652" class="outline-2">
-<h2 id="orgc977652"><span class="section-number-2">4.</span> Mithryl</h2>
+<div id="outline-container-orgf24b641" class="outline-2">
+<h2 id="orgf24b641"><span class="section-number-2">4.</span> Mithryl</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Elven metal. Cool stuff.
@@ -270,14 +270,19 @@ Deals <a href="damage-guide.html#ID-23919bd5-7bb0-4743-ae81-f07566ccd236">cold</
 </p>
 </div>
 </div>
-<div id="outline-container-orgb6b968c" class="outline-2">
-<h2 id="orgb6b968c"><span class="section-number-2">5.</span> Deep crystal</h2>
+<div id="outline-container-org3c61e96" class="outline-2">
+<h2 id="org3c61e96"><span class="section-number-2">5.</span> Deep crystal</h2>
+<div class="outline-text-2" id="text-5">
+<p>
+Mysterious ore found in geodes far underground past the domain of the dwarves. Extremely effective weapons, but brittle, limiting their usage to only the most dire of situations.
+</p>
 </div>
-<div id="outline-container-org183de57" class="outline-2">
-<h2 id="org183de57"><span class="section-number-2">6.</span> Dwarven Smelt</h2>
+</div>
+<div id="outline-container-org44c8eb3" class="outline-2">
+<h2 id="org44c8eb3"><span class="section-number-2">6.</span> Dwarven Smelt</h2>
 <div class="outline-text-2" id="text-6">
 <p>
-A strange mix of metals, crafted with skilled hands into reliable and strong weapons. Their composition gives their weapons a unique resonance, generating an electrical field when attacking enemies.
+A strange mix of metals, crafted with skilled hands into reliable and strong weapons. Its composition gives weapons made from it a unique resonance, generating an electrical field when attacking enemies.
 </p>
 
 <p>
@@ -285,32 +290,32 @@ Deals <a href="damage-guide.html#ID-23919bd5-7bb0-4743-ae81-f07566ccd236">shock<
 </p>
 </div>
 </div>
-<div id="outline-container-orge25c72e" class="outline-2">
-<h2 id="orge25c72e"><span class="section-number-2">7.</span> Steel</h2>
+<div id="outline-container-orgd635534" class="outline-2">
+<h2 id="orgd635534"><span class="section-number-2">7.</span> Steel</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 The standard. Lighter than iron, more flexible than iron, and far stronger than . An adventurers best choice of weapon.
 </p>
 </div>
 </div>
-<div id="outline-container-org81a4ce9" class="outline-2">
-<h2 id="org81a4ce9"><span class="section-number-2">8.</span> Iron</h2>
+<div id="outline-container-org607ad17" class="outline-2">
+<h2 id="org607ad17"><span class="section-number-2">8.</span> Iron</h2>
 <div class="outline-text-2" id="text-8">
 <p>
 Heavy smelted iron, especially strong and tough. Just don&rsquo;t leave them in water.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc672c41" class="outline-2">
-<h2 id="orgc672c41"><span class="section-number-2">9.</span> Stone</h2>
+<div id="outline-container-org370ff10" class="outline-2">
+<h2 id="org370ff10"><span class="section-number-2">9.</span> Stone</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 The caveman special. Effective bludgeoning weapons, and sharp enough rocks may even cut opponents!
 </p>
 </div>
 </div>
-<div id="outline-container-org9711846" class="outline-2">
-<h2 id="org9711846"><span class="section-number-2">10.</span> Wooden</h2>
+<div id="outline-container-orgd86218d" class="outline-2">
+<h2 id="orgd86218d"><span class="section-number-2">10.</span> Wooden</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 Gotta start somewhere. Grab a branch and start swinging!
@@ -321,7 +326,7 @@ Gotta start somewhere. Grab a branch and start swinging!
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-06 Thu 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-11 Fri 10:20</p>
+<p class="date">Created: 2024-02-26 Mon 09:23</p>
 </div>
 </body>
 </html>
